# MineClone

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  premake5.lua
MineClone/assets/: fragment_shader.glsl  vertex_shader.glsl
MineClone/assets/shaders/: grid.frag  grid.vert  hud.frag
MineClone/src/: Block.cpp  Block.hpp  Chunk.cpp  Chunk.hpp  FileSystem.cpp  FileSystem.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  TextureAtlas.cpp  TextureAtlas.hpp  TextureMap.cpp  TextureMap.hpp  Textures.hpp  Types.hpp  World.cpp  World.hpp  main.cpp
MineClone/src/Blocks/: Block.cpp  Block.hpp  Blocks.hpp  DirtBlock.cpp  DirtBlock.hpp  GrassBlock.cpp  GrassBlock.hpp  StoneBlock.cpp  StoneBlock.hpp
MineClone/src/Graphics/: Camera.cpp  Camera.hpp  PrimitiveType.hpp  RenderState.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  Transformable.cpp  Transformable.hpp  Vertex.cpp  Vertex.hpp  VertexBuffer.cpp  VertexBuffer.hpp
MineClone/src/Hud/: Cursor.cpp  Cursor.hpp
MineClone/src/Maths/: Coords.cpp  Coords.hpp  FrustumView.cpp  FrustumView.hpp  Ray.cpp
MineClone/src/Utility/: Hash.hpp
MineClone/src/World/: Chunk.cpp  Chunk.hpp  ChunkManager.cpp  ChunkManager.hpp  ChunkSegment.cpp  ChunkSegment.hpp  Player.cpp  Player.hpp  World.cpp  World.hpp
MineClone/src/World/Blocks/: Block.cpp  Block.hpp  BlockMesh.cpp  BlockMesh.hpp  Blocks.hpp  DirtBlock.hpp  GrassBlock.hpp  StoneBlock.hpp
MineClone/src/World/Chunk/: Chunk.cpp  Chunk.hpp  ChunkManager.cpp  ChunkManager.hpp  ChunkSegment.cpp  ChunkSegment.hpp
MineClone/src/World/Generators/: IWorldGenerator.hpp  WorldGeneratorV1.cpp  WorldGeneratorV1.hpp
MineClone/tests/: tests.cpp
